# pandora-llm

./: .gitignore  .readthedocs.yaml  70m_0.005_15.pt  Attack.py  DetectGPT.py  Fully_Running_LiRa_Notebook.ipynb  Fully_Running_LiRa_Notebook_160m.ipynb  Fully_Running_LiRa_Notebook_160m_Weird.ipynb  GRAD.py  Hutchinson.py  LICENSE.txt  LOSS.py  LOSS_EleutherAI-pythia-70m-deduped_step98000_bs=1_nbatches=1000.pt  LR_attack.ipynb  LiRa.py  LoRa.py  Loss_Ratio_1.4b.ipynb  Loss_Ratio_160m.ipynb  Loss_Ratio_1b.ipynb  Loss_Ratio_2.8b.ipynb  Loss_Ratio_410m.ipynb  Loss_Ratio_70m.ipynb  Loss_Ratio_Plots.ipynb  MoPe.py  README.md  Untitled.ipynb  aggregate_results.py  attack_utils.py  basic_threshold_MI.ipynb  command_line_perturb_weights_attack.py  common_code.py  conduct_attack.ipynb  conduct_attack.py  conduct_loss.ipynb  conduct_mope.ipynb  cross_entropy_threshold_attack.py  dataset_utils.py  detect_gpt_utils.py  ds_config_zero3.json  find_best_combination.ipynb  (+36 more)
.ipynb_checkpoints/: basic_threshold_MI-checkpoint.ipynb  plot threshold attack success-checkpoint.ipynb
DetectGPT/: DetectGPT_EleutherAI-pythia-1.4b-deduped_step98000_bs=1_nbatches=10.pt  DetectGPT_EleutherAI-pythia-160m-deduped_step98000_bs=1_nbatches=10.pt  DetectGPT_EleutherAI-pythia-410m-deduped_step98000_bs=1_nbatches=10.pt  DetectGPT_EleutherAI-pythia-410m-deduped_step98000_bs=1_nbatches=5.pt  DetectGPT_EleutherAI-pythia-70m-deduped_step98000_bs=1_nbatches=250.pt
MoPe_CIFAR_ResNet/: LOSS_CIFAR.py  MoPe_CIFAR.py  MoPe_on_CIFAR_ResNet.ipynb  README.md  main.py
OLD/: README.md  fine_tuning_MI2.ipynb  (+3 more)
(+248 files in other folders)
