[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandora_llm"
version = "2024.6.25"
description = "Red-teaming large language models for train data leakage"
authors = [
    {name = "Jeffrey Wang"},
    {name = "Jason Wang"},
    {name = "Marvin Li"},
    {name = "Seth Neel"}
]
requires-python = ">=3.10"
dependencies = [
    "python==3.10",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "torchaudio==2.3.0",
    "transformers==4.41.0",
    "datasets==2.19.1",
    "zstandard==0.22.0",
    "deepspeed==0.14.2",
    "accelerate==0.30.1",
    "scikit-learn==1.5.0",
    "matplotlib==3.9.0",
    "plotly==5.22.0",
    "kaleido==0.1.0",
    "sentencepiece==0.2.0",
    "setuptools==70.0.0",
    "einops==0.7.0",
    "traker==0.3.2",
]
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["red-teaming", "privacy", "large language model", "membership inference attack", "extraction"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://safr-ai.quarto.pub/pandora/"
Documentation = "https://pandora-llm.readthedocs.io/en/latest/"
Repository = "https://github.com/safr-ai-lab/pandora-llm"
